adding more references

--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -1282,3 +1282,197 @@ DOI: 10.1007/11840541_68},
   date = {1993},
   url = {https://api.semanticscholar.org/CorpusID:9693265}
 }
+@article{mahonyAdaptiveCompensationAerodynamic2001,
+  title = {Adaptive {{Compensation}} of {{Aerodynamic Effects}} during {{Takeoff}} and {{Landing Manoeuvres}} for a {{Scale Model Autonomous Helicopter}}},
+  author = {Mahony, R. and Hamel, T.},
+  date = {2001-01},
+  journaltitle = {European Journal of Control},
+  shortjournal = {European Journal of Control},
+  volume = {7},
+  number = {1},
+  pages = {43--57},
+  issn = {09473580},
+  doi = {10.1016/S0947-3580(01)70939-9},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0947358001709399},
+  urldate = {2025-08-10},
+  langid = {english}
+}
+@article{hamelDynamicModellingConfiguration2002,
+  title = {Dynamic {{Modelling}} and {{Configuration Stabilization}} for an {{X4-Flyer}}},
+  author = {Hamel, Tarek and Mahony, Robert and Lozano, Rogelio and Ostrowski, James},
+  date = {2002},
+  journaltitle = {IFAC Proceedings Volumes},
+  shortjournal = {IFAC Proceedings Volumes},
+  volume = {35},
+  number = {1},
+  pages = {217--222},
+  issn = {14746670},
+  doi = {10.3182/20020721-6-ES-1901.00848},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1474667015392697},
+  urldate = {2025-08-10},
+  abstract = {A model for the dynamics of a four rotor vertical take-off and landing (VTOL) vehicle known as an X4-flyer is proposed. The model incorporates the airframe and motor dynamics as well as aerodynamic and gyroscopic effects due to the rotors for quasi-stationary flight conditions. A novel control strategy is proposed for configuration stabilization of quasi-stationary flight conditions. The approach taken involves separating the rigid body (airframe) dynamics from the motor dynamics, developing separate control Lyapunov functions for the coupled systems and then bounding the perturbation error due to the interaction to obtain strong practical stability of the complete system.},
+  langid = {english}
+}
+@online{poundsDesignConstructionControl2007,
+  title = {Design, Construction and Control of a Large Quadrotor Micro Air Vehicle},
+  author = {Pounds, Paul Edward Ian},
+  namea = {University, The Australian National},
+  nameatype = {collaborator},
+  date = {2007},
+  eprinttype = {The Australian National University},
+  pages = {xxi, 171 p.},
+  doi = {10.25911/5D651066AC8BD},
+  url = {https://openresearch-repository.anu.edu.au/handle/1885/146543},
+  urldate = {2025-08-10},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Micro air vehicles,Mobile robots Control systems,Mobile robots Design and construction,TJ211.415.P68 2007}
+}
+@inproceedings{mckerrowModellingDraganflyerFourrotor2004,
+  title = {Modelling the {{Draganflyer}} Four-Rotor Helicopter},
+  booktitle = {{{IEEE International Conference}} on {{Robotics}} and {{Automation}}, 2004. {{Proceedings}}. {{ICRA}} '04. 2004},
+  author = {McKerrow, P.},
+  date = {2004},
+  pages = {3596-3601 Vol.4},
+  publisher = {IEEE},
+  location = {New Orleans, LA, USA},
+  doi = {10.1109/ROBOT.2004.1308810},
+  url = {http://ieeexplore.ieee.org/document/1308810/},
+  urldate = {2025-08-10},
+  eventtitle = {{{IEEE International Conference}} on {{Robotics}} and {{Automation}}, 2004. {{Proceedings}}. {{ICRA}} '04. 2004},
+  isbn = {978-0-7803-8232-9}
+}
+@book{newtonNewtonsPrincipiaMathematical1846,
+  title = {Newton's {{Principia}}: The Mathematical Principles of Natural Philosophy},
+  author = {Newton, Isaac and Motte, Andrew and Adee, Daniel and Chittenden, N. W.},
+  date = {1846},
+  series = {Mathematical Principles of Natural Philosophy},
+  number = {4, vii, 581 p.},
+  publisher = {Published by Daniel Adee},
+  location = {New-York},
+  url = {https://catalog.hathitrust.org/Record/000383380},
+  pagetotal = {4, vii, 581 p.},
+  keywords = {Celestial mechanics / Early works to 1800,Mechanics / Early works to 1800}
+}
+@article{rosenNovelApproachAxisymmetric2008,
+  title = {Novel {{Approach}} to {{Axisymmetric Actuator Disk Modeling}}},
+  author = {Rosen, Aviv and Gur, Ohad},
+  date = {2008-11},
+  journaltitle = {AIAA Journal},
+  shortjournal = {AIAA Journal},
+  volume = {46},
+  number = {11},
+  pages = {2914--2925},
+  issn = {0001-1452, 1533-385X},
+  doi = {10.2514/1.37383},
+  url = {https://arc.aiaa.org/doi/10.2514/1.37383},
+  urldate = {2025-08-25},
+  langid = {english}
+}
+@incollection{glauertAirplanePropellers1935,
+  title = {Airplane Propellers},
+  booktitle = {Aerodynamic Theory: A General Review of Progress under a Grant of the Guggenheim Fund for the Promotion of Aeronautics},
+  author = {Glauert, H.},
+  date = {1935},
+  pages = {169--360},
+  publisher = {Springer Berlin Heidelberg},
+  location = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-642-91487-4_3},
+  url = {https://doi.org/10.1007/978-3-642-91487-4_3},
+  abstract = {The earlier theories of the action of the screw propeller date back to the pioneer work of Rankine and Wm. Froude, the contributions of the latter continued and enlarged by R. E. Froude. These studies all related naturally to the screw propeller as applied to the problems of marine propulsion. However, there is, of course, no difference in basic theory between the propeller in its action on water and on air, and these earlier studies of Rankine and of the Froudes furnish a natural and logical historical starting point for a discussion of the theory of the screw propeller for aeronautic purposes.},
+  isbn = {978-3-642-91487-4}
+}
+@book{ohtaColorimetryFundamentalsApplications2005,
+  title = {Colorimetry: {{Fundamentals}} and {{Applications}}},
+  shorttitle = {Colorimetry},
+  author = {Ohta, Noboru and Robertson, Alan R.},
+  date = {2005-11-11},
+  edition = {1},
+  publisher = {Wiley},
+  doi = {10.1002/0470094745},
+  url = {https://onlinelibrary.wiley.com/doi/book/10.1002/0470094745},
+  urldate = {2025-09-05},
+  isbn = {978-0-470-09472-3 978-0-470-09474-7},
+  langid = {english}
+}
+@book{montgomeryIntroductionLinearRegression2013,
+  title = {Introduction to {{Linear Regression Analysis}}},
+  author = {Montgomery, Douglas C. and Peck, Elizabeth A. and Vining, G. Geoffrey},
+  date = {2013},
+  series = {Wiley {{Series}} in {{Probability}} and {{Statistics}}},
+  edition = {5. Aufl},
+  publisher = {Wiley},
+  location = {s.l.},
+  abstract = {Praise for the Fourth Edition'As with previous editions, the authors have produced a leading textbook on regression.' —Journal of the American Statistical AssociationA comprehensive and up-to-date introduction to the fundamentals of regression analysisIntroduction to Linear Regression Analysis, Fifth Edition continues to present both the conventional and less common uses of linear regression in today’s cutting-edge scientific research. The authors blend both theory and application to equip readers with an understanding of the basic principles needed to apply regression model-building techniques in various fields of study, including engineering, management, and the health sciences.Following a general introduction to regression modeling, including typical applications, a host of technical tools are outlined such as basic inference procedures, introductory aspects of model adequacy checking, and polynomial regression models and their variations. The book then discusses how transformations and weighted least squares can be used to resolve problems of model inadequacy and also how to deal with influential observations. The Fifth Edition features numerous newly added topics, including:A chapter on regression analysis of time series data that presents the Durbin-Watson test and other techniques for detecting autocorrelation as well as parameter estimation in time series regression modelsRegression models with random effects in addition to a discussion on subsampling and the importance of the mixed modelTests on individual regression coefficients and subsets of coefficientsExamples of current uses of simple linear regression models and the use of multiple regression models for understanding patient satisfaction data.In addition to Minitab, SAS, and S-PLUS, the authors have incorporated JMP and the freely available R software to illustrate the discussed techniques and procedures in this new edition. Numerous exercises have been added throughout, allowing readers to test their understanding of the material, and a related FTP site features the presented data sets, extensive problem solutions, software hints, and PowerPoint slides to facilitate instructional use of the book.Introduction to Linear Regression Analysis, Fifth Edition is an excellent book for statistics and engineering courses on regression at the upper-undergraduate and graduate levels. The book also serves as a valuable, robust resource for professionals in the fields of engineering, life and biological sciences, and the social sciences. DOUGLAS C. MONTGOMERY, PhD, is Regents Professor of Industrial Engineering and Statistics at Arizona State University. Dr. Montgomery is a Fellow of the American Statistical Association, the American Society for Quality, the Royal Statistical Society, and the Institute of Industrial Engineers and has more than thirty years of academic and consulting experience. He has devoted his research to engineering statistics, specifically the design and analysis of experiments, statistical methods for process monitoring and optimization, and the analysis of time-oriented data. Dr. Montgomery is the coauthor of Generalized Linear Models: With Applications in Engineering and the Sciences, Second Edition and Introduction to Time Series Analysis and Forecasting, both published by Wiley.ELIZABETH A. PECK, PhD, is Logistics Modeling Specialist at the Coca-Cola Company in Atlanta, Georgia.G. GEOFFREY VINING, PhD, is Professor in the Department of Statistics at Virginia Polytechnic and State University. He has published extensively in his areas of research interest, which include experimental design and analysis for quality improvement, response surface methodology, and statistical process control. A Fellow of the American Statistical Association and the American Society for Quality, Dr. Vining is the coauthor of Generalized Linear Models: With Applications in Engineering and the Sciences, Second Edition (Wiley)},
+  isbn = {978-0-470-54281-1},
+  langid = {english},
+  pagetotal = {25697}
+}
+@book{chatterjeeHandbookRegressionAnalysis2013,
+  title = {Handbook of Regression Analysis},
+  author = {Chatterjee, Samprit and Simonoff, Jeffrey S.},
+  date = {2013},
+  publisher = {Wiley},
+  location = {Hoboken, New Jersey},
+  doi = {10.1002/9781118532843},
+  isbn = {978-0-470-88716-5 978-1-118-53283-6 978-1-118-53281-2 978-1-118-53282-9 978-1-118-53284-3},
+  langid = {english},
+  pagetotal = {1}
+}
+@book{sipserIntroductionTheoryComputation2013,
+  title = {Introduction to the Theory of Computation},
+  author = {Sipser, Michael},
+  date = {2013},
+  edition = {Third edition, international edition},
+  publisher = {Cengage Learning},
+  location = {Australia Brazil Japan Korea Mexiko Singapore Spain United Kingdom United States},
+  isbn = {978-1-133-18779-0 978-1-133-18781-3 978-0-357-67058-3},
+  langid = {english},
+  pagetotal = {458},
+  annotation = {Citationkey: 123}
+}
+@book{dorfModernControlSystems2017,
+  title = {Modern Control Systems},
+  author = {Dorf, Richard C. and Bishop, Robert H.},
+  date = {2017},
+  edition = {Thirteenth edition, global edition},
+  publisher = {Pearson},
+  location = {Harlow, England London New York Boston San Francisco Toronto Sydney Dubai Singapore Hong Kong Tokyo Seoul Taipei New Delhi Cape Town São Paulo Mexico City Madrid Amsterdam Munich Paris Milan},
+  isbn = {978-0-13-440762-3 978-1-292-15297-4},
+  langid = {english},
+  pagetotal = {1025},
+  keywords = {⭐⭐}
+}
+@book{niseControlSystemsEngineering2015,
+  title = {Control Systems Engineering},
+  author = {Nise, Norman S.},
+  date = {2015},
+  edition = {Seventh edition},
+  publisher = {Wiley},
+  location = {Hoboken, NJ},
+  abstract = {Highly regarded for its case studies and accessible writing, Control Systems Engineering is a valuable resource for engineers. It takes a practical approach while presenting clear and complete explanations. Real world examples demonstrate the analysis and design process. In addition, helpful skill assessment exercises, numerous},
+  isbn = {978-1-118-17051-9},
+  langid = {english},
+  annotation = {OCLC: 890971708}
+}
+@book{ogataModernControlEngineering2010,
+  title = {Modern Control Engineering},
+  author = {Ogata, Katsuhiko},
+  date = {2010},
+  edition = {5th ed},
+  publisher = {Prentice-Hall},
+  location = {Boston},
+  abstract = {Ogata's Modern Control Engineering, 5/e , offers the comprehensive coverage of continuous-time control systems that all senior students must have, including frequency response approach, root-locus approach, and state-space approach to analysis and design of control systems. The text provides a gradual development of control theory, shows how to solve all computational problems with MATLAB, and avoids highly mathematical arguments. A wealth of examples and worked problems are featured throughout the text},
+  isbn = {978-0-13-615673-4},
+  langid = {english},
+  annotation = {OCLC: 435428910}
+}
+@standard{DINIEC600503512014,
+  title = {{{DIN IEC}} 60050-351:2014-09, {{Internationales Elektrotechnisches Wörterbuch}}\_- {{Teil}}\_351: {{Leittechnik}} ({{IEC}}\_60050-351:2013)},
+  shorttitle = {{{DIN IEC}} 60050-351},
+  date = {2014-09},
+  publisher = {DIN Media GmbH},
+  doi = {10.31030/2159569},
+  url = {https://www.dinmedia.de/de/-/-/208013542},
+  urldate = {2025-10-10}
+}
