--- a/src/content/docs/en/control/chapter-001.mdx
+++ b/src/content/docs/en/control/chapter-001.mdx
@@ -3,20 +3,28 @@ title: "Introduction to Control"
 description: "Overview"
 ---
 
-## Basic Concepts and Terminology
+Basic Concepts and Terminology.
 
-### System
+## System
+
+<Think>
+    What is a system?
+</Think>
+
+In the world of control systems, there is no a single definition of a system that can be considered THE definition. However, all definitions have certain properties in common, and terminology varies depending on the author. Below are some definitions of a system.
+
 
 <Definition term="System">
     Interconnections of elements and devices for a desired purpose.
 
-    Source: Modern Control System 13th edition by Richard C. Dorf and Robert H. Bishop
+    Source: @dorfModernControlSystems2017
+
 </Definition>
 
 <Definition term="System">
 A control system consists of subsystems and processes (or plants) assembled for the purpose of obtaining a **desired output** with **desired performance**, given a **specified input**.
 
-Source: Control System Engineering, Nise (2015)
+Source: @niseControlSystemsEngineering2015
 </Definition>
 
 Other definition,
@@ -24,8 +32,10 @@ Other definition,
 <Definition term="System">
 A system is a combination of components that act together and perform a certain objective. A system need not be physical. The concept of the system can be applied to abstract, dynamic phenomena such as those encountered in economics. The word system should, therefore, be interpreted to imply physical, biological, economic, and the like, systems.
 
-Source: Modern Control Engineering 5th edition by Katsuhiko Ogata
+Source: @ogataModernControlEngineering2010
 </Definition>
+
+There are standards such as @DINIEC600503512014 that provide a “standardized definition” of different terms. Unfortunately, you have to pay to access them.
 
 <Drawio
     file="control-001.drawio"
@@ -35,17 +45,39 @@ Source: Modern Control Engineering 5th edition by Katsuhiko Ogata
 
 This set of *devices/components/elements* could be **sensors** and **actuators** for example.
 
-### Plant
 
-<Definition term="Plan">
+<Definition term="System (formal)">
+An systen is model by function $\Sigma$ that maps from the input space into the output space.
+
+    $$
+    \Sigma : \sU \rightarrow \sY, \quad y = \Sigma(u)
+    $$
+
+Where each admissible input signal $u \in \sU$ is map to an unique output signal $y \in \sY$.
+
+Using functional notation:
+
+    $$
+    \vy = \Sigma(\vu) \in \sY
+    $$
+</Definition>
+
+<Drawio
+    file="control-001.drawio"
+    page="12"
+    description="Representation of system."
+/>
+
+## Plant and Process
+
+Different authors use the terms plant and process to refer to the same part of a system.
+
+<Definition term="Plant">
 A plant may be a piece of equipment, perhaps just a set of machine parts functioning together, the purpose of which is to perform a particular operation.
 
 Source: Modern Control Engineering 5th edition by Katsuhiko Ogata
 </Definition>
 
-Any controllable device or object can be referred to as a plant.
-
-### Process
 
 Ogata refers to "process" as any operation to be controlled.
 
@@ -54,8 +86,9 @@ Ogata refers to "process" as any operation to be controlled.
     page="1"
     description="Representation of a process."
 />
+In summary: Any controllable device or object can be referred to as a plant or process.
 
-### Disturbances
+## Disturbances
 
 <Definition term="Disturbances">
 A disturbance is a signal that tends to **adversely** affect the value of the output of a system. If a disturbance is generated within the system, it is called *internal*, while an *external* disturbance is generated outside the system and is an input."
@@ -64,7 +97,7 @@ Source: Modern Control Engineering 5th edition by Katsuhiko Ogata
 </Definition>
 
 
-### Sensor
+## Sensor
 
 <Definition term="Sensor">
 Device that receives and responds to a signal or stimulus.
@@ -81,7 +114,7 @@ Source: Own definition influenced by Chapter 1, Data Acquisition Handbook of mod
 
 Sensor: quantifying physical properties
 
-### Actuator
+## Actuator
 
 <Definition term="Actuator">
 An actuator is a device that converts energy (typically electrical, hydraulic, or pneumatic)
@@ -133,7 +166,7 @@ Own definition influenced by Chapter 1, Data Acquisition Handbook of modern sens
     description="Antenna azimuth position control system (minimal representation)."
 />
 
-## Design Process
+## Design Process (Part 2)
 
 <Drawio
     file="control-001.drawio"
@@ -193,5 +226,3 @@ Types of responses:
 
 
 ## References
-
--  Ogata 1.1, Dorf-Bishop 1.1
