--- a/src/content/docs/en/drones/index.mdx
+++ b/src/content/docs/en/drones/index.mdx
@@ -3,9 +3,6 @@ title: Drones
 description: behind drones
 ---
 
-import SimpleArm from "../../../components/Drones/SimpleArm.astro"
-
-
 ## Prerequisites for Diving
 
 - linear algebra
@@ -16,21 +13,20 @@ import SimpleArm from "../../../components/Drones/SimpleArm.astro"
 ## Module 1 - Operator Level
 
 Part 1: Introduction
-- [General about drones](./drones-intro)
-- [Development Landscape](./drones-landscape)
+- [General about drones](./intro)
+- [Development Landscape](./landscape)
 
 Part 2: Mathematical foundations
-- [Flying principles](./drones-principles)
+- [Flying principles](./principles)
 
 Part 3: The Propulsion System
 - [Motors](./motors) (this is a general topic)
 - [Propellers](./drones-props)
-- [Electronic Speed Controller](./drones-esc) (for brushless motors)
-- [Batteries](./battery) (this is a general topic)
+- [Electronic Speed Controller](./esc) (for brushless motors)
+- [Batteries](../batteries.mdx) (this is a general topic)
 
 Part 4: Sensors:
-- [Core and common sensors in a drone](./drones-core-sensors)
-- [External positioning sensors](./drones-external-sensors)
+- [Core and external](./sensors)
 
 Part 5: Communication
 - [Data links and telemetry]()
