--- a/src/content/docs/en/motors.mdx
+++ b/src/content/docs/en/motors.mdx
@@ -9,21 +9,26 @@ import Brushless from "../../../components/Motors/Brushless.astro"
 - Coreless motors -> H bridge control
 - Servo motors
 - Brushless motors -> Electronic Speed controller (ESC)
-    - [ESC](./drones-esc)
+    - [ESC](./drones/esc)
     - Motor KV
     - RPM
 
-## Winding
+## The Anatomy
+
+- rotor
+- stator
+
+### Winding
 
 - oxygen free copper
 - tight air gap
 
-## Stator core
+### Stator core
 
 - laminated silicon steel (for core)
 - low carbon steel (for flux ring)
 
-## Magnets
+### Magnets
 
 Neodymium Magnets (NdFeB)
 - Grade: N35, N42, N52, etc.
@@ -34,7 +39,7 @@ Neodymium Magnets (NdFeB)
 
 - lower KV motors are more efficient: only due to practical manufacturing contraints
 
-## KV
+### KV
 
 <Equation
     formula="\textrm{KV} = \frac{\textrm{RPM}_{\textrm{no load}}}{V_{\textrm{BEMF}}}"
@@ -46,5 +51,5 @@ Neodymium Magnets (NdFeB)
 ## External Resources
 
 - [These drone motors can carry a car!](https://www.youtube.com/watch?v=TQ9eZPoWJkI), amazing inside of drone motor factory by [Strange Parts](https://www.youtube.com/@StrangeParts) and [Freerchobby](https://freerchobby.cc/).
-- [Electric motor](https://en.wikipedia.org/wiki/Electric_motor)
+- [Electric motor - Wikipedia](https://en.wikipedia.org/wiki/Electric_motor)
 
