update notes on drones

--- a/src/content/docs/en/drones/index.mdx
+++ b/src/content/docs/en/drones/index.mdx
@@ -18,10 +18,11 @@ Part 1: Introduction
 
 Part 2: Mathematical foundations
 - [Flying principles](./principles)
+- [System Dynamics](./dynamics)
 
 Part 3: The Propulsion System
 - [Motors](./motors) (this is a general topic)
-- [Propellers](./drones-props)
+- [Propellers](./props) (practical considerations). For a theoretical perspective see [Flying principles](./principles)
 - [Electronic Speed Controller](./esc) (for brushless motors)
 - [Batteries](../batteries.mdx) (this is a general topic)
 
@@ -33,7 +34,7 @@ Part 5: Communication
     - WiFi
     - 2.4 Ghz
     - 4G/LTE
-    - [Mavlink](https://mavlink.io/)
+    - [Mavlink](https://mavlink.io/), [A Gentle Introduction to MAVLink](../mavlink.mdx)
 - Radio Controller:
     - Receiver (RX) and Transmitter (TX)
     - [Communication](https://docs.px4.io/main/en/getting_started/rc_transmitter_receiver.html#compatible_receivers)
