--- a/src/content/docs/en/drones/intro.mdx
+++ b/src/content/docs/en/drones/intro.mdx
@@ -10,6 +10,7 @@ description: Overview of the current (2025) and pass landscape
 - classification and types of UAV
 - current applications (in production environments)
 - future application (state of the art, in lab environments)
+- Common and extra components that form a drone.
 - open challenges of drones, from the technology perspective, skipping regulatory challenges (this can be a whole lecture).
 
 ## Definitions and Terminologies
