--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -1476,3 +1476,83 @@ DOI: 10.1007/11840541_68},
   url = {https://www.dinmedia.de/de/-/-/208013542},
   urldate = {2025-10-10}
 }
+@book{franklinFeedbackControlDynamic2020,
+  title = {Feedback Control of Dynamic Systems},
+  author = {Franklin, Gene F. and Powell, J. David and Emami-Naeini, Abbas},
+  date = {2020},
+  edition = {Eighth edition, global edition},
+  publisher = {Pearson Education Limited},
+  location = {Harlow, United Kingdom},
+  isbn = {978-1-292-27452-2},
+  langid = {english},
+  pagetotal = {1}
+}
+@book{astromFeedbackSystemsIntroduction2021,
+  title = {Feedback Systems: An Introduction for Scientists and Engineers},
+  shorttitle = {Feedback Systems},
+  author = {Åström, Karl J. and Murray, Richard M.},
+  date = {2021},
+  edition = {Second edition},
+  publisher = {Princeton University Press},
+  location = {Princeton Oxford},
+  isbn = {978-0-691-19398-4},
+  langid = {english},
+  pagetotal = {505}
+}
+@article{rankineMechanicalPrincipalsAction1865,
+  title = {On the {{Mechanical Principals}} of the {{Action}} of {{Propellers}}},
+  author = {Rankine, William John Macquorn},
+  date = {1865-04-06},
+  journaltitle = {Transactions of the Royal Institution of Naval Architects},
+  volume = {6},
+  number = {1865},
+  pages = {13--39},
+  issn = {0035-8967},
+  url = {https://babel.hathitrust.org/cgi/pt?id=mdp.39015022700325&seq=47},
+  langid = {english}
+}
+@incollection{kumarOpportunitiesChallengesAutonomous2017,
+  title = {Opportunities and {{Challenges}} with {{Autonomous Micro Aerial Vehicles}}},
+  booktitle = {Robotics {{Research}}},
+  author = {Kumar, Vijay and Michael, Nathan},
+  editor = {Christensen, Henrik I. and Khatib, Oussama},
+  date = {2017},
+  volume = {100},
+  pages = {41--58},
+  publisher = {Springer International Publishing},
+  location = {Cham},
+  doi = {10.1007/978-3-319-29363-9_3},
+  url = {http://link.springer.com/10.1007/978-3-319-29363-9_3},
+  urldate = {2025-10-17},
+  isbn = {978-3-319-29362-2 978-3-319-29363-9}
+}
+@incollection{muraleedharanModellingSimulationUAV2020,
+  title = {Modelling and Simulation of {{UAV}} Systems},
+  booktitle = {Imaging and {{Sensing}} for {{Unmanned Aircraft Systems}}. {{Volume}} 1: {{Control}} and {{Performance}}},
+  author = {Muraleedharan, Narendran and Cohen, Daniel S. and Estrela, Vania V. and Hemanth, Jude and Saotome, Osamu and Nikolakopoulos, George and Sabatini, Roberto and Wackett, Lawrence},
+  editor = {Estrela, Vania V. and Hemanth, Jude and Saotome, Osamu and Nikolakopoulos, George and Sabatini, Roberto},
+  date = {2020-04-20},
+  pages = {101--121},
+  publisher = {{Institution of Engineering and Technology}},
+  doi = {10.1049/PBCE120F_ch5},
+  url = {https://digital-library.theiet.org/content/books/10.1049/pbce120f_ch5},
+  urldate = {2025-10-17},
+  isbn = {978-1-78561-642-6 978-1-78561-643-3},
+  langid = {english}
+}
+@book{maInvitation3DVision2004,
+  title = {An {{Invitation}} to 3-{{D Vision}}},
+  author = {Ma, Yi and Soatto, Stefano and Košecká, Jana and Sastry, S. Shankar},
+  editor = {Antman, S. S. and Marsden, J. E. and Sirovich, L. and Wiggins, S.},
+  editortype = {redactor},
+  date = {2004},
+  series = {Interdisciplinary {{Applied Mathematics}}},
+  volume = {26},
+  publisher = {Springer New York},
+  location = {New York, NY},
+  doi = {10.1007/978-0-387-21779-6},
+  url = {http://link.springer.com/10.1007/978-0-387-21779-6},
+  urldate = {2022-03-30},
+  isbn = {978-1-4419-1846-8 978-0-387-21779-6},
+  langid = {english}
+}
