what about this URL ?

--- a/src/content/docs/en/drones/index.mdx
+++ b/src/content/docs/en/drones/index.mdx
@@ -13,8 +13,8 @@ description: behind drones
 ## Module 1 - Operator Level
 
 Part 1: Introduction
-- [General about drones](intro)
-- [Development Landscape](landscape)
+- [General about drones](drones/intro)
+- [Development Landscape](drones/landscape)
 
 Part 2: Mathematical foundations
 - [Flying principles](./principles)
