fix relative links

--- a/src/content/docs/en/drones/index.mdx
+++ b/src/content/docs/en/drones/index.mdx
@@ -17,24 +17,24 @@ Part 1: Introduction
 - [Development Landscape](drones/landscape)
 
 Part 2: Mathematical foundations
-- [Flying principles](./principles)
-- [System Dynamics](./dynamics)
+- [Flying principles](drones/principles)
+- [System Dynamics](drones/dynamics)
 
 Part 3: The Propulsion System
-- [Motors](./motors) (this is a general topic)
-- [Propellers](./props) (practical considerations). For a theoretical perspective see [Flying principles](./principles)
-- [Electronic Speed Controller](./esc) (for brushless motors)
-- [Batteries](../batteries.mdx) (this is a general topic)
+- [Motors](drones/motors) (this is a general topic)
+- [Propellers](drones/props) (practical considerations). For a theoretical perspective see [Flying principles](drones/principles)
+- [Electronic Speed Controller](drones/esc) (for brushless motors)
+- [Batteries](batteries) (this is a general topic)
 
 Part 4: Sensors:
-- [Core and external](./sensors)
+- [Core and external](drones/sensors)
 
 Part 5: Communication
 - [Data links and telemetry]()
     - WiFi
     - 2.4 Ghz
     - 4G/LTE
-    - [Mavlink](https://mavlink.io/), [A Gentle Introduction to MAVLink](../mavlink.mdx)
+    - [Mavlink](https://mavlink.io/), [A Gentle Introduction to MAVLink](mavlink.mdx)
 - Radio Controller:
     - Receiver (RX) and Transmitter (TX)
     - [Communication](https://docs.px4.io/main/en/getting_started/rc_transmitter_receiver.html#compatible_receivers)
