--- a/src/content/docs/en/control/index.mdx
+++ b/src/content/docs/en/control/index.mdx
@@ -5,4 +5,5 @@ description: "Overview"
 
 ## Structure
 
-- [Introduction](chapter-001)
+- [Introduction](control/chapter-001)
+- [g-h Filter](control/g-h-filter) (complementary filter)
