add frontmatter option to disable toc

--- a/src/content/docs/en/home.mdx
+++ b/src/content/docs/en/home.mdx
@@ -3,14 +3,11 @@ title: "Collection of Notes"
 description: My personal collection of notes related to robotics.
 ---
 
-import Cube from '../../../components/Figures/Cube.astro';
+**What is this website?**; Most, if not all, of my notes are a humble and well-intentioned attempt to bring formalism closer to intuition, rigorous (within my personal limitations) but approachable, covering concepts and topics primarily for my own edification, and although this may seem egocentric, I make them public with the hope that they can serve as a resource for anyone else.
 
-## Background (TL;DR)
+**Disclaimer**: Think about this website as *rummaging* through my (virtual) notebook; therefore, some notes may be chaotic --just ideas-- and others may be fully structured and polished.
 
-For a long time I've watend to have a personal documentation website equipped with all sorts of tools to make the content more engaging and interactive, but without shooting myself in the foot with complicated markup languages and long editing time. So after years trying out different platforms, frameworks, libraries and markups I realize that I love the simplicity of `markdown`, but for those features it falls short in interactivity and modularity (and that's fine), but I would love to have the option of defining more dynamic content. At that point it comes into play [`MDX`](https://mdxjs.com/), as they say "Markdown for the component era".
+If you have the curiosity to know how this came to be, feel free to check [this](this).
 
-Ok, problem solved (really?). Clearly the decision to use MDX is just the tip of the iceberg, there are still other problems to deal with, such as file-based routing, multi-language support, integrations, bundling, asset handling, optimizations and more, I even considered at the time *"Should I write such a framework?"*, after a couple of days thinking about it I came across [`Astro`](https://astro.build/) (version 1.0 rc had just been pre-released - July 26 2022), it was love at first sight, I still remember the level of excitement that grew more and more as I read about its features, since then I have been experimenting with it and it is just perfect.
 
-**In a nutshell**, this site is powered by [Astro](https://astro.build/) and some amazing integrations.
 
-Check out what these notes can do with this [showcase](showcase/).
