--- a/src/content/docs/en/cpp/index.mdx
+++ b/src/content/docs/en/cpp/index.mdx
@@ -17,13 +17,15 @@ Software requirements:
 
 ## Module 1 - Basics
 
-- [The build process](cpp-build)
-- [Basics of the language](cpp-basics)
-- [Standard Library (STL)](cpp-stl)
+- [The build process](cpp/build)
+- [Basics of the language](cpp/basics)
+- [Standard Library (STL)](cpp/stl)
+- [Historical Notes on OOP](cpp/oop)
 
 ## Module 2 - Utilities
 
-- [List of common Libraries](cpp-libraries)
+- [Design patterns](cpp/patterns)
+- [List of common Libraries](cpp/libraries)
 - [Idioms](cpp-idioms)
 
 ## Module 3 - Extras
